syntax = "proto3";

package yomishi.scan;

service Scan {
  rpc ScanString(ScanStringRequest) returns (ScanStringReply) {}
}

message ScanStringRequest { string text = 1; }

message ScanStringReply { repeated ScanResult results = 1; }

message ScanResult {
  repeated RubySegment ruby = 1;
  repeated string inflection_rules = 2;
  repeated string glossary = 3;
}

message RubySegment {
  string text = 1;
  optional string ruby = 2;
}